(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1238,3 +1238,4 @@ tags:
 * [2018-05-23 PowerShell 陈列架：创建二维码 vCard](/2018/05/23/powershell-gallery-creating-qrcode-vcards)
 * [2018-05-24 PowerShell 陈列架：创建地理位置二维码](/2018/05/24/powershell-gallery-creating-qr-geolocations)
 * [2018-05-25 PowerShell 陈列架：探索脚本块日志（第 1 部分）](/2018/05/25/powershell-gallery-discovering-script-block-logging-part-1)
+* [2018-05-28 PowerShell 陈列架：探索脚本块日志（第 2 部分）](/2018/05/28/powershell-gallery-discovering-script-block-logging-part-2)
