(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1239,3 +1239,10 @@ tags:
 * [2018-05-24 PowerShell 陈列架：创建地理位置二维码](/2018/05/24/powershell-gallery-creating-qr-geolocations)
 * [2018-05-25 PowerShell 陈列架：探索脚本块日志（第 1 部分）](/2018/05/25/powershell-gallery-discovering-script-block-logging-part-1)
 * [2018-05-28 PowerShell 陈列架：探索脚本块日志（第 2 部分）](/2018/05/28/powershell-gallery-discovering-script-block-logging-part-2)
+* [2018-05-29 PowerShell 陈列架 dba 工具 – 数据库专家 PowerShell 扩展](/2018/05/29/powershell-gallery-dbatools-powershell-extension-for-database-professionals)
+* [2018-05-30 批量重命名图片](/2018/05/30/bulk-renaming-pictures)
+* [2018-05-31 使用神奇的脚本块参数](/2018/05/31/using-magic-script-block-parameters)
+
+2018 年 06 月
+-------------
+* [2018-06-01 用 PowerShell 管理 Windows 10 的缺省 APP](/2018/06/01/managing-windows-10-default-apps-with-powershell)
