--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1247,3 +1247,4 @@ tags:
 -------------
 * [2018-06-01 用 PowerShell 管理 Windows 10 的缺省 APP](/2018/06/01/managing-windows-10-default-apps-with-powershell)
 * [2018-06-04 免费的 PowerShell 帮助手册](/2018/06/04/free-powershell-help-manuals)
+* [2018-06-05 配置网络适配器](/2018/06/05/configuring-network-adapter)
