(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1249,3 +1249,5 @@ tags:
 * [2018-06-04 免费的 PowerShell 帮助手册](/2018/06/04/free-powershell-help-manuals)
 * [2018-06-05 配置网络适配器](/2018/06/05/configuring-network-adapter)
 * [2018-06-06 立刻关闭显示器](/2018/06/06/turning-display-off-immediately)
+* [2018-06-07 使用秘密的 $FormatEnumerationLimit 变量](/2018/06/07/using-secret-formatenumerationlimit-variable)
+* [2018-06-08 Out-Notepad: Send Information to Notepad](/2018/06/08/out-notepad-send-information-to-notepad)
