(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1251,3 +1251,4 @@ tags:
 * [2018-06-06 立刻关闭显示器](/2018/06/06/turning-display-off-immediately)
 * [2018-06-07 使用秘密的 $FormatEnumerationLimit 变量](/2018/06/07/using-secret-formatenumerationlimit-variable)
 * [2018-06-08 Out-Notepad: Send Information to Notepad](/2018/06/08/out-notepad-send-information-to-notepad)
+* [2018-06-11 理解类型加速器（第 1 部分）](/2018/06/11/understanding-type-accelerators-part-1)
