(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1252,3 +1252,9 @@ tags:
 * [2018-06-07 使用秘密的 $FormatEnumerationLimit 变量](/2018/06/07/using-secret-formatenumerationlimit-variable)
 * [2018-06-08 Out-Notepad: Send Information to Notepad](/2018/06/08/out-notepad-send-information-to-notepad)
 * [2018-06-11 理解类型加速器（第 1 部分）](/2018/06/11/understanding-type-accelerators-part-1)
+* [2018-06-12 理解类型加速器（第 2 部分）](/2018/06/12/understanding-type-accelerators-part-2)
+* [2018-06-13 巧妙地读取事件日志（第 1 部分）](/2018/06/13/reading-event-logs-smart-part-1)
+* [2018-06-14 巧妙地读取事件日志（第 2 部分）](/2018/06/14/reading-event-logs-smart-part-2)
+* [2018-06-15 从本地时间以 ISO 格式创建 UTC 时间](/2018/06/15/create-universal-time-from-local-time-in-iso-format)
+* [2018-06-18 快速读取文本文件](/2018/06/18/reading-text-files-fast-1152612330)
+* [2018-06-19 显示输入框](/2018/06/19/displaying-input-box)
