(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1258,3 +1258,11 @@ tags:
 * [2018-06-15 从本地时间以 ISO 格式创建 UTC 时间](/2018/06/15/create-universal-time-from-local-time-in-iso-format)
 * [2018-06-18 快速读取文本文件](/2018/06/18/reading-text-files-fast-1152612330)
 * [2018-06-19 显示输入框](/2018/06/19/displaying-input-box)
+* [2018-06-20 显示消息框](/2018/06/20/displaying-message-box)
+* [2018-06-21 添加前导零](/2018/06/21/adding-leading-zeroes)
+* [2018-06-22 理解脚本块日志（第 1 部分）](/2018/06/22/understanding-script-block-logging-part-1)
+* [2018-06-25 理解脚本块日志（第 2 部分）](/2018/06/25/understanding-script-block-logging-part-2)
+* [2018-06-26 理解脚本块日志（第 3 部分）](/2018/06/26/understanding-script-block-logging-part-3)
+* [2018-06-27 理解脚本块日志（第 4 部分）](/2018/06/27/understanding-script-block-logging-part-4)
+* [2018-06-28 理解脚本块日志（第 5 部分）](/2018/06/28/understanding-script-block-logging-part-5)
+* [2018-06-29 理解脚本块日志（第 6 部分）](/2018/06/29/understanding-script-block-logging-part-6)
