(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1266,3 +1266,8 @@ tags:
 * [2018-06-27 理解脚本块日志（第 4 部分）](/2018/06/27/understanding-script-block-logging-part-4)
 * [2018-06-28 理解脚本块日志（第 5 部分）](/2018/06/28/understanding-script-block-logging-part-5)
 * [2018-06-29 理解脚本块日志（第 6 部分）](/2018/06/29/understanding-script-block-logging-part-6)
+
+2018 年 07 月
+-------------
+* [2018-07-02 理解脚本块日志（第 7 部分）](/2018/07/02/understanding-script-block-logging-part-7)
+* [2018-07-03 查看文件对应的可执行程序](/2018/07/03/finding-executable-for-file)
