(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1271,3 +1271,11 @@ tags:
 -------------
 * [2018-07-02 理解脚本块日志（第 7 部分）](/2018/07/02/understanding-script-block-logging-part-7)
 * [2018-07-03 查看文件对应的可执行程序](/2018/07/03/finding-executable-for-file)
+* [2018-07-04 速度差别：读取大型日志文件](/2018/07/04/speed-difference-reading-large-log-files)
+* [2018-07-05 使用缺省参数](/2018/07/05/using-default-parameters1)
+* [2018-07-06 在函数内使用持久变量](/2018/07/06/using-persisting-variables-inside-functions)
+* [2018-07-09 从函数中返回富对象（第 1 部分）](/2018/07/09/returning-rich-objects-from-functions-part-1)
+* [2018-07-10 从函数中返回富对象（第 2 部分）](/2018/07/10/returning-rich-objects-from-functions-part-2)
+* [2018-07-11 交换变量值](/2018/07/11/exchanging-variable-values)
+* [2018-07-12 自动生成文档和报告（第 1 部分）](/2018/07/12/automatic-document-report-generation-part-1)
+* [2018-07-13 自动生成文档和报告（第 2 部分）](/2018/07/13/automatic-document-report-generation-part-2)
