(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1279,3 +1279,4 @@ tags:
 * [2018-07-11 交换变量值](/2018/07/11/exchanging-variable-values)
 * [2018-07-12 自动生成文档和报告（第 1 部分）](/2018/07/12/automatic-document-report-generation-part-1)
 * [2018-07-13 自动生成文档和报告（第 2 部分）](/2018/07/13/automatic-document-report-generation-part-2)
+* [2018-07-16 自动生成文档和报告（第 3 部分）](/2018/07/16/automatic-document-report-generation-part-3)
