(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1331,3 +1331,9 @@ tags:
 * [2018-09-14 通过 SSL 和 Invoke-WebRequest 下载数据](/2018/09/14/downloading-data-via-ssl-and-invoke-webrequest)
 * [2018-09-14 查找禁用的 GPO](/2018/09/14/finding-disabled-gpos)
 * [2018-09-17 通过 SSL 和 BitsTransfer](/2018/09/17/downloading-data-via-ssl-and-bitstransfer-sync)
+* [2018-09-18 用 BitsTransfer 在后台下载数据](/2018/09/18/downloading-data-with-bitstransfer-in-the-background)
+* [2018-09-19 解析映射驱动器](/2018/09/19/resolving-mapped-drive)
+* [2018-09-20 用参数的方式解决凭据](/2018/09/20/handling-credentials-as-parameters)
+* [2018-09-21 从 PowerShell 函数中窃取敏感数据](/2018/09/21/stealing-sensitive-data-from-powershell-functions)
+* [2018-09-24 将数据输出为 HTML 报告](/2018/09/24/outputting-data-to-html-reports)
+* [2018-09-25 查找内存中的密码](/2018/09/25/finding-secret-passwords-in-memory)
