(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1337,3 +1337,14 @@ tags:
 * [2018-09-21 从 PowerShell 函数中窃取敏感数据](/2018/09/21/stealing-sensitive-data-from-powershell-functions)
 * [2018-09-24 将数据输出为 HTML 报告](/2018/09/24/outputting-data-to-html-reports)
 * [2018-09-25 查找内存中的密码](/2018/09/25/finding-secret-passwords-in-memory)
+* [2018-09-26 启用脚本块日志](/2018/09/26/enabling-script-block-logging)
+* [2018-09-27 强化脚本块日志](/2018/09/27/hardening-script-block-logging)
+* [2018-09-28 以其他用户身份运行 PowerShell 代码](/2018/09/28/running-powershell-code-as-someone-else)
+
+2018 年 10 月
+-------------
+* [2018-10-01 将所有脚本备份到 ZIP 中](/2018/10/01/backing-up-all-scripts-to-zip)
+* [2018-10-02 通过 Azure 认知服务使用人工智能](/2018/10/02/using-artificial-intelligence-with-azure-cognitive-services)
+* [2018-10-03 快速查找 Active Directory 组成员](/2018/10/03/finding-active-directory-group-members-efficiently)
+* [2018-10-04 通过 CSV 创建对象](/2018/10/04/using-csv-to-create-objects)
+* [2018-10-05 安装打印机](/2018/10/05/installing-printers)
