(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1348,3 +1348,4 @@ tags:
 * [2018-10-03 快速查找 Active Directory 组成员](/2018/10/03/finding-active-directory-group-members-efficiently)
 * [2018-10-04 通过 CSV 创建对象](/2018/10/04/using-csv-to-create-objects)
 * [2018-10-05 安装打印机](/2018/10/05/installing-printers)
+* [2018-10-08 自动化操作网站](/2018/10/08/automating-live-websites)
