(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1349,3 +1349,17 @@ tags:
 * [2018-10-04 通过 CSV 创建对象](/2018/10/04/using-csv-to-create-objects)
 * [2018-10-05 安装打印机](/2018/10/05/installing-printers)
 * [2018-10-08 自动化操作网站](/2018/10/08/automating-live-websites)
+* [2018-10-09 探索 Group-Object](/2018/10/09/discover-group-object)
+* [2018-10-10 改进 Group-Object](/2018/10/10/improving-group-object)
+* [2018-10-11 Adding New Incrementing Number Column in a Grid View Window](/2018/10/11/adding-new-incrementing-number-column-in-a-grid-view-window)
+* [2018-10-12 Getting AD Users with Selected First Letters](/2018/10/12/getting-ad-users-with-selected-first-letters)
+* [2018-10-15 Retrieving Outlook Calendar Entries](/2018/10/15/retrieving-outlook-calendar-entries)
+* [2018-10-16 Keeping Track of Script Execution](/2018/10/16/keeping-track-of-script-execution)
+* [2018-10-17 性能（第 1 部分）：从 6 分钟到 2 秒钟](/2018/10/17/performance-part-1-from-6-min-to-2-sec)
+* [2018-10-18 性能（第 2 部分）：从 2 秒到 200 毫秒](/2018/10/18/performance-part-2-from-2-sec-to-200ms)
+* [2018-10-19 性能（第 3 部分）：更快的管道函数](/2018/10/19/performance-part-3-faster-pipeline-functions)
+* [2018-10-22 存取隐藏（私有）成员](/2018/10/22/accessing-hidden-private-member)
+* [2018-10-23 编程检查对象属性](/2018/10/23/examining-object-properties-programmatically)
+* [2018-10-24 编程列出所有 Cmdlet 或函数参数的列表](/2018/10/24/programmatically-listing-any-cmdlet-or-function-parameters)
+* [2018-10-25 通过 PowerShell 调用 Excel 宏](/2018/10/25/invoking-excel-macros-from-powershell)
+* [2018-10-26 将 VBScript 翻译为 PowerShell](/2018/10/26/translating-vbscript-to-powershell)
