(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1363,3 +1363,5 @@ tags:
 * [2018-10-24 编程列出所有 Cmdlet 或函数参数的列表](/2018/10/24/programmatically-listing-any-cmdlet-or-function-parameters)
 * [2018-10-25 通过 PowerShell 调用 Excel 宏](/2018/10/25/invoking-excel-macros-from-powershell)
 * [2018-10-26 将 VBScript 翻译为 PowerShell](/2018/10/26/translating-vbscript-to-powershell)
+* [2018-10-29 接受不同的参数类型](/2018/10/29/accepting-different-parameter-types)
+* [2018-10-30 读取网站内容](/2018/10/30/accessing-website-content)
