(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1365,3 +1365,15 @@ tags:
 * [2018-10-26 将 VBScript 翻译为 PowerShell](/2018/10/26/translating-vbscript-to-powershell)
 * [2018-10-29 接受不同的参数类型](/2018/10/29/accepting-different-parameter-types)
 * [2018-10-30 读取网站内容](/2018/10/30/accessing-website-content)
+* [2018-10-31 使用动态参数](/2018/10/31/using-dynamic-parameters)
+* [2018-10-31 使用动态参数](/2018/10/31/using-dynamic-parameters-wub-mac)
+
+2018 年 11 月
+-------------
+* [2018-11-01 探索 PowerShell 属性值](/2018/11/01/exploring-powershell-attribute-values)
+* [2018-11-02 隐藏参数](/2018/11/02/hiding-parameters)
+* [2018-11-05 将对象转换为哈希表](/2018/11/05/turning-objects-into-hash-tables)
+* [2018-11-06 隐藏通用属性](/2018/11/06/hiding-common-parameters)
+* [2018-11-07 添加额外的安全防护](/2018/11/07/adding-extra-safety-net)
+* [2018-11-08 分析 WEB 页面内容](/2018/11/08/analyzing-web-page-content)
+* [2018-11-09 隐藏进度条](/2018/11/09/hiding-progress-bars-2)
