(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1377,3 +1377,8 @@ tags:
 * [2018-11-07 添加额外的安全防护](/2018/11/07/adding-extra-safety-net)
 * [2018-11-08 分析 WEB 页面内容](/2018/11/08/analyzing-web-page-content)
 * [2018-11-09 隐藏进度条](/2018/11/09/hiding-progress-bars-2)
+* [2018-11-12 下载 PowerShell 代码](/2018/11/12/downloading-powershell-code)
+* [2018-11-13 Invoke-WebRequest vs. Invoke-RestMethod](/2018/11/13/invoke-webrequest-vs-invoke-restmethod)
+* [2018-11-14 在 PowerShell 标题栏显示 RSS 标题](/2018/11/14/adding-rss-ticker-to-powershell-title-bar)
+* [2018-11-15 从目录结构中删除所有文件](/2018/11/15/deleting-all-files-from-a-folder-structure)
+* [2018-11-16 删除所有指定层级下的子文件夹](/2018/11/16/deleting-all-subfolders-below-a-given-level)
