(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -194,7 +194,6 @@ tags:
 * [2014-04-03 使用加密文件系统（EFS）来保护密码](/2014/04/03/using-encrypting-file-system-efs-to-protect-passwords)
 * [2014-04-04 存储秘密数据](/2014/04/04/storing-secret-data)
 * [2014-04-07 读取整个文本文件](/2014/04/07/reading-all-text)
-* [2014-04-08 修正 Excel CSV 的编码](/2014/04/08/fixing-encoding-for-excel-csv)
 * [2014-04-09 记录脚本的运行时间](/2014/04/09/logging-script-runtime)
 * [2014-04-10 将 Tick 转换为真实的日期](/2014/04/10/converting-ticks-into-real-date)
 * [2014-04-11 PowerShell 中的并行处理](/2014/04/11/parallel-processing-in-powershell)
@@ -1382,3 +1381,10 @@ tags:
 * [2018-11-14 在 PowerShell 标题栏显示 RSS 标题](/2018/11/14/adding-rss-ticker-to-powershell-title-bar)
 * [2018-11-15 从目录结构中删除所有文件](/2018/11/15/deleting-all-files-from-a-folder-structure)
 * [2018-11-16 删除所有指定层级下的子文件夹](/2018/11/16/deleting-all-subfolders-below-a-given-level)
+* [2018-11-19 查找所有二级深度的文件](/2018/11/19/find-all-files-two-levels-deep)
+* [2018-11-20 在输出中显示数组成员](/2018/11/20/displaying-array-members-in-output)
+* [2018-11-21 $FormatEnumerationLimit 作用域问题](/2018/11/21/formatenumerationlimit-scoping-issues)
+* [2018-11-22 创建写保护的函数](/2018/11/22/creating-write-protected-functions)
+* [2018-11-23 增强错误记录的可读性](/2018/11/23/making-error-records-more-readable)
+* [2018-11-26 使用目录文件](/2018/11/26/using-catalog-files)
+* [2018-11-27 将安全字符串转换为明文](/2018/11/27/converting-securestring-to-clear-text)
