(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1388,3 +1388,10 @@ tags:
 * [2018-11-23 增强错误记录的可读性](/2018/11/23/making-error-records-more-readable)
 * [2018-11-26 使用目录文件](/2018/11/26/using-catalog-files)
 * [2018-11-27 将安全字符串转换为明文](/2018/11/27/converting-securestring-to-clear-text)
+* [2018-11-28 代码签名迷你系列（第 1 部分：创建证书）](/2018/11/28/code-signing-mini-series-part-1-creating-certs)
+* [2018-11-29 代码签名迷你系列（第 2 部分：从 PFX 文件读取证书）](/2018/11/29/code-signing-mini-series-part-2-reading-certificates-from-pfx-files)
+* [2018-11-30 代码签名迷你系列（第 3 部分：从个人存储中读取证书）](/2018/11/30/code-signing-mini-series-part-3-reading-certificates-from-personal-store)
+
+2018 年 12 月
+-------------
+* [2018-12-03 代码签名迷你系列（第 4 部分：签名 PowerShell 文件）](/2018/12/03/code-signing-mini-series-part-4-code-signing-powershell-files)
