(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1395,3 +1395,6 @@ tags:
 2018 年 12 月
 -------------
 * [2018-12-03 代码签名迷你系列（第 4 部分：签名 PowerShell 文件）](/2018/12/03/code-signing-mini-series-part-4-code-signing-powershell-files)
+* [2018-12-04 代码签名迷你系列（第 5 部分：审计签名）](/2018/12/04/code-signing-mini-series-part-5-auditing-signatures)
+* [2018-12-05 为代码执行添加超时（第 1 部分）](/2018/12/05/executing-code-with-a-timeout-part-1)
+* [2018-12-06 为代码执行添加超时（第 2 部分）](/2018/12/06/executing-code-with-a-timeout-part-2)
