(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1398,3 +1398,5 @@ tags:
 * [2018-12-04 代码签名迷你系列（第 5 部分：审计签名）](/2018/12/04/code-signing-mini-series-part-5-auditing-signatures)
 * [2018-12-05 为代码执行添加超时（第 1 部分）](/2018/12/05/executing-code-with-a-timeout-part-1)
 * [2018-12-06 为代码执行添加超时（第 2 部分）](/2018/12/06/executing-code-with-a-timeout-part-2)
+* [2018-12-07 查找打开的防火墙端口](/2018/12/07/finding-open-firewall-ports)
+* [2018-12-10 使用 $MyInvocation 的固定替代方式](/2018/12/10/using-solid-alternatives-for-myinvocation)
