(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1400,3 +1400,9 @@ tags:
 * [2018-12-06 为代码执行添加超时（第 2 部分）](/2018/12/06/executing-code-with-a-timeout-part-2)
 * [2018-12-07 查找打开的防火墙端口](/2018/12/07/finding-open-firewall-ports)
 * [2018-12-10 使用 $MyInvocation 的固定替代方式](/2018/12/10/using-solid-alternatives-for-myinvocation)
+* [2018-12-11 使用一个停表](/2018/12/11/using-a-stop-watch)
+* [2018-12-12 直接存取事件日志](/2018/12/12/accessing-event-logs-directly)
+* [2018-12-13 响应新的事件日志条目（第 1 部分）](/2018/12/13/responding-to-new-event-log-entries-part-1)
+* [2018-12-14 响应新的事件日志条目（第 2 部分）](/2018/12/14/responding-to-new-event-log-entries-part-2)
+* [2018-12-17 正确使用 FileSystemWatcher（第 1 部分）](/2018/12/17/using-filesystemwatcher-correctly-part-1)
+* [2018-12-18 正确使用 FileSystemWatcher（第 2 部分）](/2018/12/18/using-filesystemwatcher-correctly-part-2)
