(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1406,3 +1406,7 @@ tags:
 * [2018-12-14 响应新的事件日志条目（第 2 部分）](/2018/12/14/responding-to-new-event-log-entries-part-2)
 * [2018-12-17 正确使用 FileSystemWatcher（第 1 部分）](/2018/12/17/using-filesystemwatcher-correctly-part-1)
 * [2018-12-18 正确使用 FileSystemWatcher（第 2 部分）](/2018/12/18/using-filesystemwatcher-correctly-part-2)
+* [2018-12-19 在打印机上打印测试页](/2018/12/19/printing-test-pages-on-printers)
+* [2018-12-20 将 PowerShell 结果发送到 PDF（第 1 部分）](/2018/12/20/sending-powershell-results-to-pdf-part-1)
+* [2018-12-21 将 PowerShell 结果发送到 PDF（第 2 部分）](/2018/12/21/sending-powershell-results-to-pdf-part-2)
+* [2018-12-24 将 PowerShell 结果发送到 PDF（第 2 部分）](/2018/12/24/sending-powershell-results-to-pdf-part-3)
