(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1411,3 +1411,7 @@ tags:
 * [2018-12-21 将 PowerShell 结果发送到 PDF（第 2 部分）](/2018/12/21/sending-powershell-results-to-pdf-part-2)
 * [2018-12-24 将 PowerShell 结果发送到 PDF（第 3 部分）](/2018/12/24/sending-powershell-results-to-pdf-part-3)
 * [2018-12-25 将 PowerShell 结果发送到 PDF（第 4 部分）](/2018/12/25/sending-powershell-results-to-pdf-part-4)
+* [2018-12-26 格式化日期和时间](/2018/12/26/formatting-date-and-time)
+* [2018-12-27 格式化日期和时间（包含区域性）](/2018/12/27/formatting-date-and-time-with-culture)
+* [2018-12-28 查看 Windows 通用唯一识别码 (UUID)](/2018/12/28/finding-windows-universal-unique-identifier-uuid)
+* [2018-12-31 连接文本文件](/2018/12/31/concatenating-text-files)
