(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1415,3 +1415,18 @@ tags:
 * [2018-12-27 格式化日期和时间（包含区域性）](/2018/12/27/formatting-date-and-time-with-culture)
 * [2018-12-28 查看 Windows 通用唯一识别码 (UUID)](/2018/12/28/finding-windows-universal-unique-identifier-uuid)
 * [2018-12-31 连接文本文件](/2018/12/31/concatenating-text-files)
+
+2019 年
+=======
+
+2019 年 01 月
+-------------
+* [2019-01-01 首字母大写](/2019/01/01/title-casing-strings-capital-letter-starts-each-word)
+* [2019-01-02 通过 Outlook 发送邮件](/2019/01/02/sending-emails-via-outlook)
+* [2019-01-03 列出网络驱动器](/2019/01/03/listing-network-drives)
+* [2019-01-04 用 ForEach 实现实时流](/2019/01/04/enable-real-time-streaming-with-foreach)
+* [2019-01-07 删除日期最早的日志文件](/2019/01/07/deleting-the-oldest-log-file)
+* [2019-01-08 解决 SSL 连接问题](/2019/01/08/solving-ssl-connection-problems)
+* [2019-01-09 重制控制台颜色](/2019/01/09/resetting-console-colors-b)
+* [2019-01-10 扫描端口](/2019/01/10/scanning-ports)
+* [2019-01-11 当前用户的 SID](/2019/01/11/sid-of-current-user)
