(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1430,3 +1430,7 @@ tags:
 * [2019-01-09 重制控制台颜色](/2019/01/09/resetting-console-colors-b)
 * [2019-01-10 扫描端口](/2019/01/10/scanning-ports)
 * [2019-01-11 当前用户的 SID](/2019/01/11/sid-of-current-user)
+* [2019-01-14 使用本地化的用户名和组名](/2019/01/14/using-localized-user-and-group-names)
+* [2019-01-15 在 Windows 10 中安装 Linux](/2019/01/15/installing-linux-on-windows-10)
+* [2019-01-16 打印 PDF 文件（第 1 部分）](/2019/01/16/printing-pdf-files-part-1)
+* [2019-01-17 打印 PDF 文件（第 2 部分）](/2019/01/17/printing-pdf-files-part-2)
