--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1434,3 +1434,5 @@ tags:
 * [2019-01-15 在 Windows 10 中安装 Linux](/2019/01/15/installing-linux-on-windows-10)
 * [2019-01-16 打印 PDF 文件（第 1 部分）](/2019/01/16/printing-pdf-files-part-1)
 * [2019-01-17 打印 PDF 文件（第 2 部分）](/2019/01/17/printing-pdf-files-part-2)
+* [2019-01-18 Retrieving Windows Product Key](/2019/01/18/retrieving-windows-product-key)
+* [2019-01-21 通过鼠标滚轮控制 PowerShell 的透明度](/2019/01/21/controlling-powershell-transparency-with-mouse-wheel)
