(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1436,3 +1436,20 @@ tags:
 * [2019-01-17 打印 PDF 文件（第 2 部分）](/2019/01/17/printing-pdf-files-part-2)
 * [2019-01-18 Retrieving Windows Product Key](/2019/01/18/retrieving-windows-product-key)
 * [2019-01-21 通过鼠标滚轮控制 PowerShell 的透明度](/2019/01/21/controlling-powershell-transparency-with-mouse-wheel)
+* [2019-01-22 获取文本文件编码](/2019/01/22/get-text-file-encoding)
+* [2019-01-23 PowerShell 速查表汇编（第 1 部分）](/2019/01/23/powershell-cheat-sheet-compilation-part-1)
+* [2019-01-24 PowerShell 速查表汇编（第 2 部分）](/2019/01/24/powershell-cheat-sheet-compilation-part-2)
+* [2019-01-25 从 Unicode 文件中移除 BOM](/2019/01/25/removing-bom-from-the-unicode-files)
+* [2019-01-28 自动打印到 XPS 文件](/2019/01/28/automatically-printing-to-xps-files)
+* [2019-01-29 将 Windows 服务器转变为工作站](/2019/01/29/turn-a-windows-server-into-a-workstation)
+* [2019-01-30 在文件管理器中隐藏 OneDrive](/2019/01/30/hide-onedrive-from-file-explorer)
+* [2019-01-31 解析 Windows 安装日期](/2019/01/31/extracting-windows-installation-date)
+
+2019 年 02 月
+-------------
+* [2019-02-01 格式化 DateTime](/2019/02/01/formatting-a-datetime)
+* [2019-02-04 计算一个月的第一天和最后一天](/2019/02/04/calculating-first-and-last-day-of-month)
+* [2019-02-05 “危险的”比较](/2019/02/05/dangerous-comparisons)
+* [2019-02-06 移除空的数组元素（第 1 部分）](/2019/02/06/removing-empty-array-elements-part-1)
+* [2019-02-07 移除空的数组元素（第 2 部分）](/2019/02/07/removing-empty-array-elements-part-2)
+* [2019-02-08 在资源管理器中启用预览 PowerShell 文件](/2019/02/08/enabling-preview-of-powershell-files-in-windows-explorer)
