--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1459,3 +1459,6 @@ tags:
 * [2019-02-15 转换 IEEE754 (Float)（第 2 部分）](/2019/02/15/converting-ieee754-float-part-2)
 * [2019-02-18 将文本转为图像](/2019/02/18/converting-text-to-image)
 * [2019-02-19 等待服务状态变化](/2019/02/19/waiting-for-a-service-status-change)
+* [2019-02-20 校验域账户密码](/2019/02/20/verifying-domain-account-passwords)
+* [2019-02-21 验证本地用户账户密码](/2019/02/21/verifying-local-user-account-passwords)
+* [2019-02-22 创建 ASCII 艺术](/2019/02/22/create-ascii-art)
