(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1462,3 +1462,12 @@ tags:
 * [2019-02-20 校验域账户密码](/2019/02/20/verifying-domain-account-passwords)
 * [2019-02-21 验证本地用户账户密码](/2019/02/21/verifying-local-user-account-passwords)
 * [2019-02-22 创建 ASCII 艺术](/2019/02/22/create-ascii-art)
+* [2019-02-25 管理 Windows 许可证密钥（第 1 部分）](/2019/02/25/managing-windows-license-key)
+* [2019-02-26 管理 Windows 授权密钥（第 2 部分）](/2019/02/26/managing-windows-license-key-part-2)
+* [2019-02-27 管理 Windows 授权密钥（第 3 部分）](/2019/02/27/managing-windows-license-key-part-3)
+* [2019-02-28 管理 Windows 授权密钥（第 4 部分）](/2019/02/28/managing-windows-license-key-part-4)
+
+2019 年 03 月
+-------------
+* [2019-03-01 计算机名、DNS 名称，和 IP 地址](/2019/03/01/computer-name-dns-name-and-ip-address)
+* [2019-03-04 Creating Aligned Headers](/2019/03/04/creating-aligned-headers)
