--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1481,3 +1481,8 @@ tags:
 * [2019-03-13 检查 Cmdlet 可用性和脚本兼容性（第 2 部分）](/2019/03/13/checking-cmdlet-availability-and-script-compatibility-part-2)
 * [2019-03-14 检查 Cmdlet 可用性和脚本兼容性（第 3 部分）](/2019/03/14/checking-cmdlet-availability-and-script-compatibility-part-3)
 * [2019-03-15 对必选参数使用自定义提示](/2019/03/15/using-custom-prompts-for-mandatory-parameters)
+* [2019-03-18 Where-Object: 只是一个带管道的 IF 语句](/2019/03/18/where-object-just-a-pipeline-aware-if-clause)
+* [2019-03-19 提升 PowerShell 管道的速度](/2019/03/19/speeding-up-the-powershell-pipeline)
+* [2019-03-20 智力游戏生成器](/2019/03/20/mind-jogging-generator)
+* [2019-03-21 通过 Outlook 发送邮件](/2019/03/21/sending-mails-via-outlook)
+* [2019-03-22 将大文件拆分成小片段（第 1 部分）](/2019/03/22/splitting-large-files-in-smaller-parts-part-1)
