(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1486,3 +1486,8 @@ tags:
 * [2019-03-20 智力游戏生成器](/2019/03/20/mind-jogging-generator)
 * [2019-03-21 通过 Outlook 发送邮件](/2019/03/21/sending-mails-via-outlook)
 * [2019-03-22 将大文件拆分成小片段（第 1 部分）](/2019/03/22/splitting-large-files-in-smaller-parts-part-1)
+* [2019-03-25 Splitting Large Files in Smaller Parts (Part 2)](/2019/03/25/splitting-large-files-in-smaller-parts-part-2-wub-mac)
+* [2019-03-25 将大文件拆分成小片段（第 2 部分）](/2019/03/25/splitting-large-files-in-smaller-parts-part-2)
+* [2019-03-26 将大文件拆分成小片段（第 3 部分）](/2019/03/26/splitting-large-files-in-smaller-parts-part-3)
+* [2019-03-27 修复 PowerShellGet 发布](/2019/03/27/repairing-powershellget-publishing)
+* [2019-03-28 让新手运行 PowerShell 脚本](/2019/03/28/launching-powershell-scripts-for-dummies)
