(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1491,3 +1491,8 @@ tags:
 * [2019-03-26 将大文件拆分成小片段（第 3 部分）](/2019/03/26/splitting-large-files-in-smaller-parts-part-3)
 * [2019-03-27 修复 PowerShellGet 发布](/2019/03/27/repairing-powershellget-publishing)
 * [2019-03-28 让新手运行 PowerShell 脚本](/2019/03/28/launching-powershell-scripts-for-dummies)
+* [2019-03-29 修复 PowerShell 上下文菜单](/2019/03/29/repairing-powershell-context-menus)
+
+2019 年 04 月
+-------------
+* [2019-04-01 删除无法删除的注册表键](/2019/04/01/deleting-registry-keys-that-can-t-be-deleted)
