(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1496,3 +1496,5 @@ tags:
 2019 年 04 月
 -------------
 * [2019-04-01 删除无法删除的注册表键](/2019/04/01/deleting-registry-keys-that-can-t-be-deleted)
+* [2019-04-02 向编码的命令传递参数](/2019/04/02/passing-arguments-to-encoded-commands)
+* [2019-04-03 禁止用户输入](/2019/04/03/blocking-user-input)
