(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1500,3 +1500,4 @@ tags:
 * [2019-04-03 禁止用户输入](/2019/04/03/blocking-user-input)
 * [2019-04-04 用 PowerShell 锁定屏幕](/2019/04/04/locking-the-screen-with-powershell)
 * [2019-04-05 向上下文菜单添加个人 PowerShell 命令](/2019/04/05/adding-personal-powershell-commands-to-the-context-menu)
+* [2019-04-08 优先使用 WLAN 连接](/2019/04/08/preferring-wlan-connections)
