--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1501,3 +1501,6 @@ tags:
 * [2019-04-04 用 PowerShell 锁定屏幕](/2019/04/04/locking-the-screen-with-powershell)
 * [2019-04-05 向上下文菜单添加个人 PowerShell 命令](/2019/04/05/adding-personal-powershell-commands-to-the-context-menu)
 * [2019-04-08 优先使用 WLAN 连接](/2019/04/08/preferring-wlan-connections)
+* [2019-04-09 超级简单的密码生成器](/2019/04/09/super-simple-random-password-generator)
+* [2019-04-10 发现嵌套层数](/2019/04/10/discovering-nesting-level)
+* [2019-04-11 Get-PSCallStack 和调试](/2019/04/11/get-pscallstack-and-debugging)
