(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1504,3 +1504,4 @@ tags:
 * [2019-04-09 超级简单的密码生成器](/2019/04/09/super-simple-random-password-generator)
 * [2019-04-10 发现嵌套层数](/2019/04/10/discovering-nesting-level)
 * [2019-04-11 Get-PSCallStack 和调试](/2019/04/11/get-pscallstack-and-debugging)
+* [2019-04-12 向字符串添加数字](/2019/04/12/adding-numbers-to-a-string-part-1)
