(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1504,4 +1504,8 @@ tags:
 * [2019-04-09 超级简单的密码生成器](/2019/04/09/super-simple-random-password-generator)
 * [2019-04-10 发现嵌套层数](/2019/04/10/discovering-nesting-level)
 * [2019-04-11 Get-PSCallStack 和调试](/2019/04/11/get-pscallstack-and-debugging)
-* [2019-04-12 向字符串添加数字](/2019/04/12/adding-numbers-to-a-string-part-1)
+* [2019-04-12 向字符串添加数字（第 1 部分）](/2019/04/12/adding-numbers-to-a-string-part-1)
+* [2019-04-15 向字符串添加数字（第 2 部分）](/2019/04/15/adding-numbers-to-a-string-part-2)
+* [2019-04-16 命令发现机制揭秘（第 1 部分）](/2019/04/16/command-discovery-unleashed-part-1)
+* [2019-04-17 命令发现机制揭秘（第 2 部分）](/2019/04/17/command-discovery-unleashed-part-2)
+* [2019-04-18 锁定工作站](/2019/04/18/locking-workstation-1)
