--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1509,3 +1509,4 @@ tags:
 * [2019-04-16 命令发现机制揭秘（第 1 部分）](/2019/04/16/command-discovery-unleashed-part-1)
 * [2019-04-17 命令发现机制揭秘（第 2 部分）](/2019/04/17/command-discovery-unleashed-part-2)
 * [2019-04-18 锁定工作站](/2019/04/18/locking-workstation-1)
+* [2019-04-19 隐藏返回结果的属性](/2019/04/19/hiding-properties-in-return-results)
