(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1513,3 +1513,13 @@ tags:
 * [2019-04-22 使用变量断点（第 1 部分）](/2019/04/22/using-variable-breakpoints-part-1)
 * [2019-04-23 使用变量断点（第 2 部分）](/2019/04/23/using-variable-breakpoints-part-2)
 * [2019-04-24 查找服务特权](/2019/04/24/finding-service-privileges)
+* [2019-04-25 用队列代替嵌套](/2019/04/25/using-a-queue-instead-of-a-recursion)
+* [2019-04-26 Real-Time Processing for Language Structures](/2019/04/26/real-time-processing-for-language-structures)
+* [2019-04-29 将 SecureString 转换为字符串](/2019/04/29/converting-securestring-to-string)
+* [2019-04-30 PowerShell ISE 模块浏览器](/2019/04/30/powershell-ise-module-browser)
+
+2019 年 05 月
+-------------
+* [2019-05-01 查找最新的 PowerShell 6 发布](/2019/05/01/finding-latest-powershell-6-release)
+* [2019-05-02 查找最新的 PowerShell 6 发行信息（以及下载地址）](/2019/05/02/finding-latest-powershell-6-release-and-download-urls)
+* [2019-05-03 查找最新的 PowerShell 6 下载地址](/2019/05/03/finding-the-latest-powershell-6-download-url)
