(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1523,3 +1523,6 @@ tags:
 * [2019-05-01 查找最新的 PowerShell 6 发布](/2019/05/01/finding-latest-powershell-6-release)
 * [2019-05-02 查找最新的 PowerShell 6 发行信息（以及下载地址）](/2019/05/02/finding-latest-powershell-6-release-and-download-urls)
 * [2019-05-03 查找最新的 PowerShell 6 下载地址](/2019/05/03/finding-the-latest-powershell-6-download-url)
+* [2019-05-06 查找 PowerShell 命名管道](/2019/05/06/finding-powershell-named-pipes)
+* [2019-05-07 使用目录文件来维护文件夹完整性](/2019/05/07/using-catalog-files-to-maintain-folder-integrity)
+* [2019-05-08 创建代码签名证书](/2019/05/08/creating-code-signing-certificates)
