(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1526,3 +1526,6 @@ tags:
 * [2019-05-06 查找 PowerShell 命名管道](/2019/05/06/finding-powershell-named-pipes)
 * [2019-05-07 使用目录文件来维护文件夹完整性](/2019/05/07/using-catalog-files-to-maintain-folder-integrity)
 * [2019-05-08 创建代码签名证书](/2019/05/08/creating-code-signing-certificates)
+* [2019-05-09 导出和导入代码签名证书](/2019/05/09/exporting-and-importing-code-signing-certificates)
+* [2019-05-10 Compare AD User](/2019/05/10/compare-ad-user)
+* [2019-05-13 将 PowerShell 输出重定向到 GridView](/2019/05/13/redirecting-powershell-output-to-gridview)
