(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1531,3 +1531,6 @@ tags:
 * [2019-05-13 将 PowerShell 输出重定向到 GridView](/2019/05/13/redirecting-powershell-output-to-gridview)
 * [2019-05-14 美化 Out-GridView 对话框](/2019/05/14/pretty-out-gridview-dialog-boxes)
 * [2019-05-16 从文本创建哈希](/2019/05/16/creating-hashes-from-text)
+* [2019-05-17 获取文本的哈希值](/2019/05/17/get-hashes-from-texts)
+* [2019-05-18 以固定宽度分割文本](/2019/05/18/splitting-texts-by-fixed-width)
+* [2019-05-20 在 PowerShell 中使用 SSL/HTTPS](/2019/05/20/using-ssl-https-from-powershell)
