(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1534,3 +1534,21 @@ tags:
 * [2019-05-17 获取文本的哈希值](/2019/05/17/get-hashes-from-texts)
 * [2019-05-18 以固定宽度分割文本](/2019/05/18/splitting-texts-by-fixed-width)
 * [2019-05-20 在 PowerShell 中使用 SSL/HTTPS](/2019/05/20/using-ssl-https-from-powershell)
+* [2019-05-21 用聪明的方法指定位标志](/2019/05/21/specifying-bit-flags-smart)
+* [2019-05-22 检查坏（不安全的）密码（第 1 部分）](/2019/05/22/checking-for-bad-insecure-passwords-part-1)
+* [2019-05-23 检查坏（不安全的）密码（第 2 部分）](/2019/05/23/checking-for-bad-insecure-passwords-part-2)
+* [2019-05-24 控制音量和静音状态](/2019/05/24/controlling-audio-volume-and-mute-status)
+* [2019-05-27 开发 PowerShell Core 还是 Windows PowerShell 脚本](/2019/05/27/marking-scripts-for-powershell-core-or-windows-powershell)
+* [2019-05-28 对循环启用流操作](/2019/05/28/turn-on-streaming-for-loops)
+* [2019-05-29 通过 Index Search 搜索文件](/2019/05/29/searching-files-using-index-search)
+* [2019-05-30 内置的 RSAT 工具](/2019/05/30/rsat-tools-built-in)
+* [2019-05-31 PowerShell 7](/2019/05/31/powershell-7)
+
+2019 年 06 月
+-------------
+* [2019-06-03 使用代理服务器的缺省凭据](/2019/06/03/using-default-credentials-for-proxy)
+* [2019-06-04 同步使用 FileSystemWatcher ](/2019/06/04/using-filesystemwatcher-synchronously)
+* [2019-06-05 异步使用 FileSystemWatcher](/2019/06/05/using-filesystemwatcher-asynchronously)
+* [2019-06-06 检查按键](/2019/06/06/detecting-key-press)
+* [2019-06-07 查看下载文件的大小](/2019/06/07/finding-size-of-download)
+* [2019-06-10 解析 URL](/2019/06/10/resolving-urls-2)
