(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1552,3 +1552,7 @@ tags:
 * [2019-06-06 检查按键](/2019/06/06/detecting-key-press)
 * [2019-06-07 查看下载文件的大小](/2019/06/07/finding-size-of-download)
 * [2019-06-10 解析 URL](/2019/06/10/resolving-urls-2)
+* [2019-06-11 查找登录事件](/2019/06/11/finding-logon-events)
+* [2019-06-12 谁执行了隐藏的程序？](/2019/06/12/who-is-starting-hidden-programs)
+* [2019-06-13 寻找丢失的更新](/2019/06/13/finding-missing-updates)
+* [2019-06-14 查找已安装的更新（第 1 部分）](/2019/06/14/finding-installed-updates-part-1)
