(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1556,3 +1556,5 @@ tags:
 * [2019-06-12 谁执行了隐藏的程序？](/2019/06/12/who-is-starting-hidden-programs)
 * [2019-06-13 寻找丢失的更新](/2019/06/13/finding-missing-updates)
 * [2019-06-14 查找已安装的更新（第 1 部分）](/2019/06/14/finding-installed-updates-part-1)
+* [2019-06-17 查找已安装的更新（第 2 部分）](/2019/06/17/finding-installed-updates-part-2)
+* [2019-06-18 订阅锁定和解锁事件](/2019/06/18/subscribe-to-lock-and-unlock-events)
