(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1558,3 +1558,6 @@ tags:
 * [2019-06-14 查找已安装的更新（第 1 部分）](/2019/06/14/finding-installed-updates-part-1)
 * [2019-06-17 查找已安装的更新（第 2 部分）](/2019/06/17/finding-installed-updates-part-2)
 * [2019-06-18 订阅锁定和解锁事件](/2019/06/18/subscribe-to-lock-and-unlock-events)
+* [2019-06-19 Left Side of Comparison](/2019/06/19/left-side-of-comparison)
+* [2019-06-20 在 Web Request 中使用会话变量](/2019/06/20/using-session-variables-in-web-requests)
+* [2019-06-21 使用 GeoCoding（第 1 部分）](/2019/06/21/working-with-geocoding-part-1)
